// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`web installer (default github) 1`] = `
{
  "win": [
    {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": {
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "ia32": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-ia32.nsis.7z",
            "path": "TestApp-1.1.0-ia32.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "ia32",
      "file": "TestApp-1.1.0-ia32.nsis.7z",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.nsis.7z",
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "TestApp-WebSetup-1.1.0.exe",
          },
        ],
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "ia32": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-ia32.nsis.7z",
            "path": "TestApp-1.1.0-ia32.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "releaseDate": "@releaseDate",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`web installer 1`] = `
{
  "win": [
    {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": {
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.nsis.7z",
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.1.0.exe",
          },
        ],
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "releaseDate": "@releaseDate",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`web installer, appPackageUrl is complete URL (no arch paths appended) 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, appPackageUrl with trailing slash is used verbatim 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, auto-computed URL from GitHub sets APP_PACKAGE_URL_IS_INCOMPLETE 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, auto-computed URL from S3 sets APP_PACKAGE_URL_IS_INCOMPLETE 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, auto-computed URL from generic provider sets APP_PACKAGE_URL_IS_INCOMPLETE 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, multiple publish configs — first one is used 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, nsisWeb.publish overrides global publish config 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, safe name on github 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "WorkFlowy.exe",
      "updateInfo": {
        "packages": {
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "WorkFlowy.exe",
          },
        ],
        "packages": {
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "releaseDate": "@releaseDate",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`web installer, win.publish used when nsisWeb.publish is absent 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;
